# LE3

./: .gitignore  .gitmodules  AGENT.md  Cargo.toml  README.md  SPEC.md  THIRD_PARTY_LICENSES.md  TODO.md  build.rs
.github/workflows/: ci.yml  docs.yml
changes/: break-Lua-scripting-API-20260630-001629.md  break-Rectangles-are-now-20260701-135653.md  fix-A-rectangle-or-20260629-235543.md  fix-Bump-GitHub-Actions-20260629-193831.md  fix-CI-runs-example-20260629-193514.md  fix-Dimension-labels-and-20260701-005814.md  fix-Expression-field-variable-autocomplete-20260629-235852.md  fix-Fix-Linux-CI-20260629-193138.md  fix-Pick-visible-face-not-hidden-20260624-154700.md  fix-Push-the-ground-20260630-231139.md  fix-Redesign-the-gear-20260630-232100.md  fix-Redundant-point-on-line-coincidence-20260624-121827.md  fix-Remove-the-app-icon-20260701-103519.md  fix-Sketch-face-hoveractive-fills-20260624-123701.md  fix-Sketch-face-overlaps-20260624-103935.md  fix-Undo-now-reverts-20260629-184430.md  fix-Upright-sketch-view-on-vertical-faces-20260624-154900.md  fix-Windows-build-propagate-20260629-194919.md  fix-Windows-build-use-20260629-194204.md  fix-Wireframe-view-now-20260630-231414.md  fix-macOS-pass-IconDatadefault-20260629-231225.md  fix-macOS-skip-runtime-20260629-231122.md  new-Add-3D-solid-edge-20260701-012937.md  new-Add-a-Docusaurus-20260630-234250.md  new-Add-a-Realistic-20260701-001952.md  new-Add-document-wide-and-20260630-230716.md  new-CI-publishes-macOS-20260629-192852.md  new-Chamferfillet-now-shows-20260701-001141.md  new-Constrain-sketch-geometry-20260701-035331.md  new-Constraint-shortcuts-are-20260624-122831.md  new-Document-the-chamferfillet-20260701-001359.md  new-Elements-pane-add-20260701-015324.md  new-Elements-pane-now-20260701-014108.md  new-Export-bodies-to-20260624-121237.md  new-Export-session-commands-20260630-002325.md  new-Extrude-cut-mode-20260701-101729.md  new-Extrude-tool-click-20260701-043644.md  new-First-migrations-onto-20260701-085502.md  new-GUI-STL-export-20260629-192247.md  new-Inferenceextension-snapping-hovering-20260629-190700.md  (+19 more)
cpp/: bearcad_kernel.cpp  bearcad_kernel.hpp
docs-site/: README.md  docusaurus.config.js  package-lock.json  sidebars.js
docs-site/docs/: intro.mdx
docs-site/screenshots/: elements-pane.lua  extrude.lua  fillet.lua  rectangle.lua
examples/: export_stl.lua  line.le3script  line.lua  rectangle.le3script  rectangle.lua
scripts/: README.md  bearcad-issue-handler.sh  bearcad-monitor.sh  build-occt.sh  package-release.sh  package-windows.ps1
src/: actions.rs  app_icon.rs  camera.rs  command_log.rs  command_palette.rs  constraint_viewport.rs  constraints.rs  construction.rs  context.rs  dimensions.rs  document_health.rs  document_lifecycle.rs  expression_input.rs  extrude.rs  face.rs  geometric_constraints.rs  hierarchy.rs  icons.rs  lua_script.rs  main.rs  model.rs  names.rs  native_menu.rs  parameters.rs  polygon.rs  polygon_boolean.rs  release_artifacts.rs  script.rs  selection.rs  shortcuts.rs  snapping.rs  stl.rs  storage.rs  theme.rs  value.rs  vertex_drag.rs  view_cube.rs
src/assets/: bear.stl
src/gpu_view_cube/: bear_renderer.rs  mod.rs  shader.wgsl
src/gpu_viewport/: dim_labels.rs  mod.rs  renderer.rs  scene.rs  shader.wgsl
src/kernel/: mod.rs
src/sketch_solver/: bridge.rs  (+2 more)
(+22 files in other folders)
