[package]
name = "le3"
version = "0.1.0"
edition = "2021"
description = "LE3 — on-device parametric CAD (early prototype)"
license = "MIT OR Apache-2.0"

[[bin]]
name = "le3"
path = "src/main.rs"

[dependencies]
# wgpu backend (Metal on macOS) per SPEC §1; the default glow/OpenGL backend
# crashes with a bus error on some macOS setups.
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"
image = "0.25"
