[package]
name = "le3"
version = "0.1.0"
edition = "2021"
description = "LE3 — on-device parametric CAD (early prototype)"
license = "MIT OR Apache-2.0"

[[bin]]
name = "le3"
path = "src/main.rs"

[dependencies]
# wgpu backend (Metal on macOS) per SPEC §1; the default glow/OpenGL backend
# crashes with a bus error on some macOS setups.
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts", "x11", "wayland"] }
egui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"
image = "0.25"
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.muda]
version = "0.19"
default-features = false
# Linux/BSD need the gtk backend compiled in; macOS/Windows ignore this feature.
features = ["gtk"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.raw-window-handle]
version = "0.6"

[target.'cfg(target_os = "macos")'.dependencies.winit]
version = "0.30"
default-features = false
