[package]
name = "bearcad"
version = "0.1.0"
edition = "2021"
description = "BearCAD — on-device parametric CAD (early prototype)"
repository = "https://github.com/iffy/BearCAD"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bearcad"
path = "src/main.rs"

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"

[dependencies]
# wgpu backend (Metal on macOS) per SPEC §1; the default glow/OpenGL backend
# crashes with a bus error on some macOS setups.
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts", "x11", "wayland"] }
egui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.29", features = ["serde"] }
image = "0.25"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
bytemuck = { version = "1", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.muda]
version = "0.19"
default-features = false
# Linux/BSD need the gtk backend compiled in; macOS/Windows ignore this feature.
features = ["gtk"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.raw-window-handle]
version = "0.6"

[target.'cfg(target_os = "macos")'.dependencies.winit]
version = "0.30"
default-features = false

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
